# KNIGHT-v1_SyntropiAI-Group

./: .gitignore  Makefile  README.md  pyproject.toml
config/: cell_ontology.yaml  compute_cpu.yaml  compute_kaggle.yaml  defaults.yaml
knight/: __init__.py  cli.py
knight/data/: __init__.py
knight/data/datasets/: __init__.py  cell_dataset.py
knight/data/downloaders/: __init__.py  gencode.py  geo.py  sea_ad.py
knight/data/harmonizer/: __init__.py  batch_correction.py
knight/data/preprocessors/: __init__.py  chromatin.py  expression.py
knight/evaluation/: __init__.py
knight/evaluation/benchmarks/: __init__.py  benchmark_suite.py
knight/evaluation/metrics/: __init__.py  classification.py  integration.py  perturbation.py
knight/inference/: __init__.py
knight/model/: __init__.py
knight/model/architectures/: knight_encoder.py  knight_model.py
knight/model/heads/: __init__.py  cellstate_head.py  perturbation_head.py
knight/model/layers/: __init__.py  gene_expression_encoder.py
knight/training/: __init__.py  finetuner.py  losses.py  pretrainer.py  schedulers.py
knight/utils/: __init__.py  io.py  logging.py  reproducibility.py
scripts/data_curation/: 01_download_sea_ad.py  02_download_geo_datasets.py  04_preprocess_expression.py  06_harmonize_batches.py  07_create_splits.py
scripts/evaluation/: 01_benchmark_cellstate.py
scripts/training/: 01_pretrain_knight_min.py  02_finetune_cellstate.py  03_finetune_perturbation.py
